[project]
name = "p-cast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "granian>=2.2.5",
    "pychromecast>=14.0.7",
    "socketify>=0.0.31",
    "starlette>=0.46.2",
    "typed-ffmpeg>=2.7.3",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0",
]

[tool.pyright]
reportUnusedCallResult = false
reportUnknownMemberType = false

[dependency-groups]
types = [
    "mypy>=1.15.0",
]
