[project]
name = "p-cast"
version = "1.1.0"
description = "Cast audio from pipewire to chromecast device."
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Topic :: Utilities",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.12"
dependencies = [
  "granian>=2.2.5",
  "pulsectl-asyncio>=1.2.2",
  "pychromecast>=14.0.7",
  "socketify>=0.0.31",
  "starlette>=0.46.2",
  "typed-ffmpeg>=2.7.3",
  "uvicorn>=0.34.2",
  "uvloop>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/GenessyX/p-cast"
Repository = "https://github.com/GenessyX/p-cast"
Issues = "https://github.com/GenessyX/p-cast/issues"

[project.scripts]
p-cast = "p_cast.__main__:main"

[tool.pyright]
typeCheckingMode = "standard"
reportUnusedCallResult = false
reportUnknownMemberType = false

[tool.mypy]
overrides = [
  { module = "pulsectl.*", ignore_missing_imports = true },
  { module = "pulsectl_asyncio.*", ignore_missing_imports = true },
]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true

[dependency-groups]
lint = ["pre-commit>=4.5.1"]
release = ["python-semantic-release>=9.21.1"]
types = ["mypy>=1.18.2"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["components/moneylift/proto/moneylift"]

[tool.ruff.lint.isort]
known-first-party = ["p_cast"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["ALL"]
ignore = [
  "D",
  "TD002",
  "TD003",
  "EXE",
  "ERA",
  "FIX",
  "INP001",
  "UP037",
  "PERF401",
]
fixable = ["ALL"]
unfixable = []
flake8-quotes = { inline-quotes = 'double', multiline-quotes = 'double' }

[tool.ruff.format]
quote-style = 'double'

[tool.semantic_release]
assets = []
build_command = "uv build"
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
repo_dir = "/home/genesis/dev/chromecast/p-cast"
no_git_verify = false
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = ""
exclude_commit_patterns = []
mode = "init"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
default_bump_level = 0
parse_squash_commits = false
ignore_merge_commits = false

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
